# heartlib

./: README.md  ace_step_ui.py  heart1.py  heart1_windows_compile_example.py  pyproject.toml  requirements.txt  songen1.py
ACE-Step-1.5/: .gitignore  README.md  pyproject.toml  requirements.txt
ACE-Step-1.5/acestep/: acestep_v15_pipeline.py  constrained_logits_processor.py  gpu_config.py  handler.py  inference.py  llm_inference.py
ACE-Step-1.5/acestep/gradio_ui/: api_routes.py
ACE-Step-1.5/acestep/gradio_ui/events/: results_handlers.py
ACE-Step-1.5/acestep/gradio_ui/interfaces/: generation.py
ACE-Step-1.5/acestep/third_parts/nano-vllm/nanovllm/engine/: model_runner.py
ACE-Step-1.5/skills/acestep/: SKILL.md
SongGeneration/ckpt/songgeneration_large/: config.yaml
SongGeneration/codeclm/: __init__.py
SongGeneration/codeclm/models/: codeclm.py  levo.py  lm_levo.py
SongGeneration/codeclm/models/llama/: modeling_llama.py
SongGeneration/codeclm/modules/: __init__.py
SongGeneration/codeclm/tokenizer/Flow1dVAE/: __init__.py  generate_septoken.py
SongGeneration/codeclm/tokenizer/Flow1dVAE/libs/rvq/: __init__.py
SongGeneration/codeclm/tokenizer/Flow1dVAE/models_gpt/: __init__.py
SongGeneration/codeclm/tokenizer/Flow1dVAE/models_gpt/models/: gpt2_rope2_time_new_correct_mask_noncasual_reflow.py
SongGeneration/codeclm/tokenizer/Flow1dVAE/our_MERT_BESTRQ/: __init__.py
SongGeneration/codeclm/trainer/: __init__.py
SongGeneration/codeclm/utils/: __init__.py
SongGeneration/tools/: __init__.py
examples/: run_music_generation.py
src/heartlib/accelerators/: __init__.py  torchtune_metal.py
src/heartlib/accelerators/metal/: __init__.py  jit.py  ops.mm  rmsnorm.metal  rmsnorm.py  rope.metal  rope.py  runtime.py
src/heartlib/heartcodec/: modeling_heartcodec.py
src/heartlib/heartcodec/models/: flow_matching.py
src/heartlib/heartmula/: modeling_heartmula.py
src/heartlib/pipelines/: music_generation.py
src/heartlib/utils/: __init__.py  offloading.py
